# dragonball-sandbox

./: .gitignore  CODEOWNERS  Cargo.toml  Cross.toml  README.md  deny.toml
.github/: Vagrantfile  codecov.yml  grcov.yml
.github/workflows/: build_check.yaml  check.yaml  test.yaml  tests.yaml
crates/db-address-space/: Cargo.toml  README.md
crates/db-address-space/src/: address_space.rs  lib.rs  numa.rs  region.rs
crates/db-address-space/src/memory/: hybrid.rs  mod.rs
crates/db-allocator/: Cargo.toml  README.md
crates/db-allocator/src/: interval_tree.rs  lib.rs
crates/db-arch/: Cargo.toml  README.md
crates/db-arch/src/: lib.rs
crates/db-arch/src/aarch64/: mod.rs  regs.rs
crates/db-arch/src/aarch64/gic/: mod.rs
crates/db-arch/src/aarch64/gic/regs/: dist_regs.rs  icc_regs.rs  mod.rs  persist.rs  redist_regs.rs
crates/db-arch/src/x86_64/: layout.rs  mod.rs  msr.rs  regs.rs
crates/db-arch/src/x86_64/cpuid/: bit_helper.rs  brand_string.rs  common.rs  cpu_leaf.rs  mod.rs  x86_regs.rs
crates/db-arch/src/x86_64/cpuid/transformer/: amd.rs  common.rs  intel.rs  mod.rs
crates/db-boot/: Cargo.toml  README.md
crates/db-boot/src/: lib.rs
crates/db-boot/src/aarch64/: fdt.rs  layout.rs  mod.rs  output.dtb  output_with_initrd.dtb
crates/db-boot/src/x86_64/: bootparam.rs  layout.rs  mod.rs  mpspec.rs  mptable.rs
crates/db-cpuid/: Cargo.toml  README.md
crates/db-cpuid/src/: brand_string.rs  common.rs  cpu_leaf.rs  lib.rs
crates/db-cpuid/src/transformer/: amd.rs  common.rs  intel.rs  mod.rs
crates/db-device/: Cargo.toml  README.md
crates/db-micro-http/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/dbs-acpi/: README.md
crates/dbs-address-space/: CHANGELOG.md  Cargo.toml  README.md
crates/dbs-allocator/: CHANGELOG.md  Cargo.toml
crates/dbs-arch/: CHANGELOG.md  Cargo.toml  README.md
crates/dbs-arch/src/aarch64/: mod.rs  regs.rs
crates/dbs-arch/src/aarch64/gic/: gicv2.rs  gicv3.rs  its.rs  mod.rs
crates/dbs-arch/src/x86_64/: regs.rs
crates/dbs-arch/src/x86_64/cpuid/: brand_string.rs  mod.rs
crates/dbs-arch/src/x86_64/cpuid/transformer/: mod.rs
crates/dbs-boot/: CHANGELOG.md  Cargo.toml  README.md
crates/dbs-boot/src/: lib.rs
crates/dbs-boot/src/aarch64/: fdt.rs  layout.rs  mod.rs
crates/dbs-boot/src/aarch64/test/: output.dtb  output_with_initrd.dtb  output_with_pmu.dtb
crates/dbs-boot/src/x86_64/: layout.rs  mod.rs  mptable.rs
crates/dbs-interrupt/: CHANGELOG.md  Cargo.toml  README.md
crates/dbs-interrupt/src/: lib.rs  manager.rs  notifier.rs
crates/dbs-interrupt/src/kvm/: legacy_irq.rs  mod.rs  msi_generic.rs  msi_irq.rs
crates/dbs-legacy-devices/: CHANGELOG.md  Cargo.toml  README.md
crates/dbs-legacy-devices/src/: i8042.rs  lib.rs  rtc_pl031.rs  serial.rs
crates/dbs-miniball/: Cargo.toml  README.md
crates/dbs-miniball/docs/: CPUVirtualization.md  DeviceVirtualization.md  MemoryVirtualization.md  getting-started.md
crates/dbs-miniball/resources/: make_test_resources.sh
crates/dbs-miniball/resources/disk/: install_system.sh  make_rootfs.sh
crates/dbs-miniball/resources/kernel/: make_busybox.sh  make_kernel_busybox_image.sh  make_kernel_image_deb.sh
crates/dbs-miniball/src/: main.rs
crates/dbs-miniball/src/api/: Cargo.toml
crates/dbs-miniball/src/api/src/: api.rs  lib.rs
crates/dbs-miniball/src/devices/: Cargo.toml
crates/dbs-miniball/src/devices/src/: lib.rs
crates/dbs-miniball/src/devices/src/legacy/: mod.rs  serial.rs
crates/dbs-miniball/src/devices/src/virtio/: mod.rs
crates/dbs-miniball/src/utils/: Cargo.toml
crates/dbs-miniball/src/vm-vcpu/: Cargo.toml
crates/dbs-miniball/src/vm-vcpu/src/: lib.rs  vm.rs
crates/dbs-miniball/src/vm-vcpu/src/vcpu/: mod.rs
crates/dbs-miniball/src/vmm/: Cargo.toml
crates/dbs-miniball/src/vmm/src/: boot.rs  lib.rs  vmm.rs
crates/dbs-miniball/src/vmm/src/config/: arg_parser.rs  builder.rs  mod.rs
crates/dbs-miniball/src/vmm/src/device_manager/: console_manager.rs  mod.rs  resource_manager.rs
crates/dbs-miniball/tests/: test_build_deps.py  test_run_miniball.py
crates/dbs-miniball/tests/tools/s3/: utils.py
crates/dbs-utils/: CHANGELOG.md  Cargo.toml  THIRD-PARTY
crates/dbs-utils/src/: epoll_manager.rs  lib.rs  metric.rs  rate_limiter.rs
crates/dbs-utils/src/net/: mac.rs  tap.rs
crates/dbs-utils/src/net/net_gen/: if_tun.rs  mod.rs
crates/dbs-versionize/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY-POLICY.md  coverage_config_x86_64.json
crates/dbs-versionize-derive/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY-POLICY.md  coverage_config_aarch64.json  coverage_config_x86_64.json
crates/dbs-versionize-derive/src/: common.rs  helpers.rs  lib.rs
crates/dbs-versionize-derive/src/descriptors/: enum_desc.rs  mod.rs  struct_desc.rs
crates/dbs-versionize-derive/src/fields/: enum_variant.rs  mod.rs  struct_field.rs
crates/dbs-versionize/src/: crc.rs  lib.rs  primitives.rs  version_map.rs
crates/dbs-versionize/test-data/: Cargo.toml
crates/dbs-versionize/test-data/src/: lib.rs
crates/dbs-versionize/test-data/tests/: test.rs
crates/dbs-versionize/tests/: test.rs
crates/dbs-virtio-devices/: CHANGELOG.md  Cargo.toml
crates/dbs-virtio-devices/src/: balloon.rs  device.rs  lib.rs  mem.rs  net.rs  notifier.rs
crates/dbs-virtio-devices/src/block/: device.rs  handler.rs  mod.rs  request.rs
crates/dbs-virtio-devices/src/block/ufile/: aio.rs  io_uring.rs  localfile.rs  mod.rs
crates/dbs-virtio-devices/src/fs/: device.rs  handler.rs  mod.rs
crates/dbs-virtio-devices/src/mmio/: dragonball.rs  mmio_state.rs  mmio_v2.rs  mod.rs
crates/dbs-virtio-devices/src/vsock/: device.rs  epoll_handler.rs  mod.rs  packet.rs
crates/dbs-virtio-devices/src/vsock/backend/: inner.rs  tcp.rs  unix_stream.rs
crates/dbs-virtio-devices/src/vsock/csm/: connection.rs  mod.rs  txbuf.rs
crates/dbs-virtio-devices/src/vsock/muxer/: muxer_impl.rs  muxer_rxq.rs
db-allocator/: CODEOWNERS  README.md
docs/: crate-release.md
kernel/: 0001-dragonball-introduce-dragonball-driver.patch
(+33 files in other folders)
