[workspace]

members = [
    "crates/db-address-space",
    "crates/dbs-allocator",
    "crates/dbs-arch",
    "crates/db-boot",
    "crates/dbs-device",
    "crates/dbs-legacy-devices",
    "crates/dbs-virtio-devices",
    "crates/dbs-utils",
    "crates/dbs-interrupt",
]

[patch.crates-io]
db-boot = { path = "crates/db-boot" }
