[workspace]

members = [
    "crates/dbs-address-space",
    "crates/dbs-allocator",
    "crates/dbs-arch",
    "crates/dbs-boot",
    "crates/dbs-device",
    "crates/dbs-legacy-devices",
    "crates/dbs-virtio-devices",
    "crates/dbs-upcall",
    "crates/dbs-utils",
    "crates/dbs-interrupt",
    "crates/dbs-miniball",
]

[patch.crates-io]
# TODO: Using this patch until a version > 4.0 gets published.
linux-loader = { git = "https://github.com/rust-vmm/linux-loader.git", rev = "9a9f071" }