[workspace]

members = [
    "crates/dbs-address-space",
    "crates/dbs-allocator",
    "crates/dbs-arch",
    "crates/dbs-boot",
    "crates/dbs-device",
    "crates/dbs-legacy-devices",
    "crates/dbs-virtio-devices",
    "crates/dbs-upcall",
    "crates/dbs-utils",
    "crates/dbs-interrupt",
    "crates/dbs-miniball",
    "crates/dbs-tdx",
]