[package]
name = "db-address-space"
version = "0.1.0"
authors = ["Alibaba Dragonball Team"]
license = "Apache-2.0"
edition = "2018"
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox"
keywords = ["dragonball", "address", "vmm", "secure-sandbox"]
readme = "README.md"

[dependencies]
libc = "0.2.39"
nix = "0.15"
thiserror = "1"
vmm-sys-util = "0.8"
vm-memory = { version = "0.7", features = ["backend-mmap"] }

arc-swap = { version = ">=0.4.8", optional = true }

[features]
default = []
memory-hotplug = ["region-hotplug"]
region-hotplug = ["vm-memory/backend-atomic", "arc-swap"]
