[package]
name = "db-boot"
version = "0.1.0"
authors = ["Alibaba Dragonball Team"]
license = "Apache-2.0"
edition = "2018"
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox"
keywords = ["dragonball", "boot", "VMM"]
readme = "README.md"

[dependencies]
db-arch = { path = "../db-arch", version = "0.1" }
libc = "0.2.39"
thiserror = "1"
vm-memory = "0.7.0"

[dev-dependencies]
vm-memory = { version = "0.7.0", features = ["backend-mmap"] }
