[package]
name = "dbs-arch"
version = "0.1.0"
authors = ["Alibaba Dragonball Team"]
license = "Apache-2.0 AND BSD-3-Clause"
edition = "2018"
description = "A collection of CPU architecture specific constants and utilities."
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox"
keywords = ["dragonball", "secure-sandbox", "arch", "ARM64", "x86"]
readme = "README.md"

[dependencies]
memoffset = "0.6"
kvm-bindings = { version = "0.5.0", features = ["fam-wrappers"] }
kvm-ioctls = ">=0.9.0"
vm-memory = { version = "0.9" }
vmm-sys-util = "0.10.0"
libc = ">=0.2.39"

[dev-dependencies]
vm-memory = { version = "0.9", features = ["backend-mmap"] }

[package.metadata.docs.rs]
all-features = true
