[package]
name = "dbs-interrupt"
version = "0.1.0"
authors = ["Alibaba Dragonball Team"]
license = "Apache-2.0"
edition = "2018"
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox"
keywords = ["dragonball", "secure-sandbox", "device", "interrupt"]
readme = "README.md"

[dependencies]
thiserror = "1"
vmm-sys-util = ">=0.8.0"
libc = "0.2"
kvm-bindings = { version = "0.5.0", optional = true }
kvm-ioctls = { version = "0.11.0", optional = true }
dbs-device = { path = "../dbs-device", version = "0.1.0" }

[features]
default = ["legacy-irq", "msi-irq"]

legacy-irq = []
msi-irq = []

kvm-irq = ["kvm-ioctls", "kvm-bindings"]
kvm-msi-generic = ["msi-irq", "kvm-irq"]
kvm-legacy-irq = ["legacy-irq", "kvm-irq"]
kvm-msi-irq = ["kvm-msi-generic"]
