[package]
name = "dbs-miniball"
version = "0.1.0"
authors = ["Alibaba Dragonball Team"]
license = "Apache-2.0"
edition = "2018"
description = "dbs-miniball is a minimal virtual machine manager"
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox"
keywords = ["dragonball", "miniball"]
readme = "README.md"

[dependencies]
vmm = { path = "src/vmm" }
api = { path = "src/api" }
