[package]
name = "dbs-utils"
version = "0.1.0"
authors = ["Alibaba Dragonball Team"]
license = "Apache-2.0"
edition = "2018"
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox"
keywords = ["dragonball", "secure-sandbox", "utils"]
readme = "README.md"

[dependencies]
serde = { version = "1.0.27", features = ["derive", "rc"] }

[dev-dependencies]
serde_json = "1.0.9"
