[package]
name = "dbs-utils"
version = "0.1.0"
authors = ["Alibaba Dragonball Team"]
license = "Apache-2.0"
edition = "2018"
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox"
keywords = ["dragonball", "secure-sandbox", "utils"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.27", features = ["derive", "rc"] }
event-manager = { version = "0.2.1", features = [ "remote_endpoint" ] }
vmm-sys-util = "0.9.0"

[dev-dependencies]
serde_json = "1.0.9"
