[package]
name = "dbs-versionize-derive"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Alibaba Dragonball Team"]
description = "Implements the Versionize derive proc macro for Dragonball-sandbox."
repository = "https://github.com/openanolis/dragonball-sandbox/tree/main/crates/dbs-versionize-derive"
keywords = ["serialization", "deserialization", "version"]
readme = "README.md"
edition = "2018"

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.13", features=["full", "extra-traits"]}
semver = "1.0.16"

[lib]
proc-macro = true

[badges]
maintenance = { status = "experimental" }
