[package]
name = "dbs_versionize_derive"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>", "Alibaba Dragonball Team"]
description = "Implements the Versionize derive proc macro."
readme = "README.md"
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox/tree/main/crates/dbs-versionize-derive"
keywords = ["serialization", "deserialization", "version"]
edition = "2018"

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.13", features=["full", "extra-traits"]}

[lib]
proc-macro = true

[badges]
maintenance = { status = "experimental" }
