[package]
name = "versionize"
version = "0.1.10"
license = "Apache-2.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
description = "A version tolerant serialization/deserialization framework."
readme = "README.md"
repository = "https://github.com/firecracker-microvm/versionize"
keywords = ["serialization", "version"]
categories = ["encoding"]

[dependencies]
serde = "1.0.27"
serde_derive = "1.0.27"
bincode = "1.2.1"
versionize_derive = "0.1.4"
crc64 = "2.0.0"
vmm-sys-util = "0.11.0"

[build-dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.13", features=["default","full"]}

[badges]
maintenance = { status = "experimental" }
