[package]
name = "dbs-versionize"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>", "Alibaba Dragonball Team"]
description = "A version tolerant serialization/deserialization framework."
readme = "README.md"
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox/tree/main/crates/dbs-versionize"
keywords = ["serialization", "deserialization", "version"]
edition = "2018"

[dependencies]
serde = "1.0.27"
serde_derive = "1.0.27"
bincode = "1.2.1"
versionize_derive = "0.1.4"
crc64 = "2.0.0"
vmm-sys-util = "0.11.0"

[build-dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.13", features=["default","full"]}

[badges]
maintenance = { status = "experimental" }
