[package]
name = "dbs-virtio-devices"
version = "0.1.0"
authors = ["Alibaba Dragonball Team"]
license = "Apache-2.0"
edition = "2018"
description = "Virtio device backend driver framework and device drivers"
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox/tree/main/crates/dbs-virtio-devices"
keywords = ["dragonball", "secure-sandbox", "devices", "virtio"]
readme = "README.md"

[dependencies]
byteorder = "1.4.3"
dbs-device = { version = "0.1.0", path = "../dbs-device" }
dbs-interrupt = { version = "0.1.0", path = "../dbs-interrupt", features = ["kvm-legacy-irq", "kvm-msi-irq"] }
dbs-utils = { version = "0.1.0", path = "../dbs-utils" }
epoll = "4.0.1"
kvm-bindings = "0.5.0"
kvm-ioctls = "0.11.0"
libc = "0.2.39"
log = "0.4.14"
serde = { version = "1.0.27", features = ["derive", "rc"] }
thiserror = "1"
virtio-bindings = "0.1.0"
virtio-queue = "0.1.0"
vmm-sys-util = "0.9.0"
vm-memory = "0.7.0"

[dev-dependencies]
vm-memory = { version = "0.7.0", features = [ "backend-mmap", "backend-atomic" ] }

[features]
virtio-mmio = []
virtio-vsock = ["virtio-mmio"]
virtio-net = ["virtio-mmio"]
virtio-blk = ["virtio-mmio"]
