[package]
name = "dbs-virtio-devices"
version = "0.1.1"
authors = ["Alibaba Dragonball Team"]
license = "Apache-2.0 AND BSD-3-Clause"
edition = "2018"
description = "Virtio device backend driver framework and device drivers"
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox/tree/main/crates/dbs-virtio-devices"
keywords = ["dragonball", "secure-sandbox", "devices", "virtio"]
readme = "README.md"

[dependencies]
byteorder = "1.4.3"
caps = "0.5.3"
dbs-device = { version = "0.2.0", path = "../dbs-device" }
dbs-interrupt = { version = "0.2.0", path = "../dbs-interrupt", features = ["kvm-legacy-irq", "kvm-msi-irq"] }
dbs-utils = { version = "0.2.0", path = "../dbs-utils" }
epoll = "4.0.1"
io-uring = "0.5.2"
fuse-backend-rs = { version = "0.10.0", optional = true }
kvm-bindings = "0.6.0"
kvm-ioctls = "0.11.0"
libc = "0.2.119"
log = "0.4.14"
nix = "0.23.1"
nydus-api = { git = "https://github.com/dragonflyoss/image-service.git", rev = "99ba5000a734315ac8549c8ec21cebfc61d26e7f", optional = true }
nydus-blobfs = { git = "https://github.com/dragonflyoss/image-service.git", rev = "99ba5000a734315ac8549c8ec21cebfc61d26e7f", optional = true }
nydus-rafs = { git = "https://github.com/dragonflyoss/image-service.git", rev = "99ba5000a734315ac8549c8ec21cebfc61d26e7f", optional = true }
rlimit = "0.7.0"
serde = "1.0.27"
serde_json = "1.0.9"
thiserror = "1"
threadpool = "1"
virtio-bindings = "0.1.0"
virtio-queue = "0.6.0"
vmm-sys-util = "0.11.0"
vm-memory = { version = "0.9.0", features = [ "backend-mmap" ] }

[dev-dependencies]
vm-memory = { version = "0.9.0", features = [ "backend-mmap", "backend-atomic" ] }

[features]
virtio-mmio = []
virtio-vsock = ["virtio-mmio"]
virtio-net = ["virtio-mmio"]
virtio-blk = ["virtio-mmio"]
virtio-fs = ["virtio-mmio", "fuse-backend-rs/virtiofs", "nydus-rafs/virtio-fs", "nydus-blobfs/virtiofs"]
virtio-fs-pro = ["virtio-fs", "nydus-blobfs/backend-registry", "nydus-blobfs/backend-oss", "nydus-rafs/backend-registry", "nydus-rafs/backend-oss"]
