[package]
name = "vm-vcpu"
version = "0.1.0"
authors = ["Alibaba Dragonball Team"]
license = "Apache-2.0"
edition = "2018"
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox"
keywords = ["dragonball", "Miniball", "vcpu"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
libc = "0.2.76"
kvm-bindings = { version = "0.5.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.11.0"
vm-memory = "0.7.0"
vmm-sys-util = "0.9.0"
vm-device = "0.1.0"

utils = { path = "../utils" }

dbs-arch = { path = "../../../dbs-arch" }
dbs-boot = { path = "../../../dbs-boot" }

[dev-dependencies]
vm-memory = { version = "0.7.0", features = ["backend-mmap"] }
