[package]
name = "vmm"
version = "0.1.0"
authors = ["Alibaba Dragonball Team"]
license = "Apache-2.0"
edition = "2018"
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox"
keywords = ["dragonball", "Miniball", "vmm"]
readme = "README.md"

[dependencies]
thiserror = "1"
event-manager = "0.2.1"
kvm-bindings = { version = "0.5.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.11.0"
libc = "0.2.91"
linux-loader = { version = "0.4.0", features = ["bzimage", "elf"] }
vm-allocator = "0.1.0"
vm-memory = { version = "0.7.0", features = ["backend-mmap"] }
vm-superio = "0.5.0"
vmm-sys-util = "0.9.0"
vm-device = "0.1.0"

devices = { path = "../devices" }
vm-vcpu = { path = "../vm-vcpu" }
utils = { path = "../utils" }

dbs-arch = { path = "../../../dbs-arch" }
dbs-boot = { path = "../../../dbs-boot" }
dbs-address-space = { path = "../../../dbs-address-space" }